--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "mongoose": "~3.6.11",
-    "body-parser": "~1.13.2",
+    "bignum": "^0.11.0",
+    "body-parser": "^1.5.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
     "method-override": "^2.1.2",
-    "body-parser": "^1.5.1"
+    "mongoose": "~3.6.11",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
   }
 }
