--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "method-override": "^2.1.2",
     "mongoose": "~3.6.11",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sha256": "^0.2.0"
   }
 }
